fix: add concurrentMap & stringUtils